--- a/public/index.html
+++ b/public/index.html
@@ -40,5 +40,6 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <script src="assets/plugins/solidity.utilities.min.js" type="text/javascript"></script>
   </body>
 </html>
