--- a/public/index.html
+++ b/public/index.html
@@ -41,5 +41,6 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
     <script src="assets/plugins/solidity.utilities.min.js" type="text/javascript"></script>
+    <script src="assets/scripts/script.js" type="text/javascript"></script>
   </body>
 </html>
