--- a/public/index.html
+++ b/public/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
-      name="description"
-      content="Web site created using create-react-app"
+      name="Covenants - EthOS"
+      content="Here you will find Covenants. Empowered by the Aggregator, these contracts free us to create, control and customize our experience like never before."
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     
