--- a/public/index.html
+++ b/public/index.html
@@ -40,8 +40,9 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <script src="https://cdn.jsdelivr.net/npm/ipfs-http-client/dist/index.min.js"></script>
     <script src="assets/scripts/script.js" type="text/javascript"></script>
     <script src="assets/plugins/solidity.utilities.min.js" type="text/javascript"></script>
-    <script src="assets/scripts/script.js" type="text/javascript"></script>
+    
   </body>
 </html>
